--- a/src/app/features/products/products.component.scss
+++ b/src/app/features/products/products.component.scss
@@ -1,88 +1,124 @@
 /* home.component.scss */
 .spacer {
-    flex: 1 1 auto;
-  }
-  mat-toolbar{
-    display: flex !important;
-    align-items: center !important;
-    justify-content: space-between !important;
-  }
-  .home-container {
-    padding: 20px;
-  
-    mat-form-field {
-      width: 100%;
-      max-width: 300px;
-      margin-bottom: 20px;
-    }
-  }
-  
-  .product-card {
+  flex: 1 1 auto;
+}
+
+mat-toolbar {
+  display: flex !important;
+  align-items: center !important;
+  justify-content: space-between !important;
+}
+
+.home-container {
+  padding: 20px;
+
+  mat-form-field {
     width: 100%;
-    height: 100%;
+    max-width: 300px;
+    margin-bottom: 20px;
+  }
+}
+.add-btn{
+  position: absolute;
+    bottom: -12px;
+    right: 24%;
+}
+
+// .product-card {
+//   width: 100%;
+//   height: 100%;
+//   display: flex;
+//   flex-direction: column;
+
+//   img {
+//     object-fit: cover;
+//     height: 200px;
+//   }
+
+//   mat-card-content {
+//     flex-grow: 1;
+
+//     h2 {
+//       font-size: 18px;
+//       font-weight: bold;
+//       margin-bottom: 10px;
+//     }
+
+//     .price {
+//       font-size: 16px;
+//       font-weight: bold;
+//       color: #4caf50;
+//     }
+
+//     .category {
+//       font-size: 14px;
+//       color: #757575;
+//     }
+//   }
+
+//   mat-card-actions {
+//     display: flex;
+//     justify-content: center;
+//     padding-bottom: 16px;
+//   }
+// }
+.product-card {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: stretch;
+  gap: 24px;
+
+  & mat-card-content {
     display: flex;
     flex-direction: column;
-  
-    img {
-      object-fit: cover;
-      height: 200px;
-    }
-  
-    mat-card-content {
-      flex-grow: 1;
-  
-      h2 {
-        font-size: 18px;
-        font-weight: bold;
-        margin-bottom: 10px;
-      }
-  
-      .price {
-        font-size: 16px;
-        font-weight: bold;
-        color: #4caf50;
-      }
-  
-      .category {
-        font-size: 14px;
-        color: #757575;
-      }
-    }
-  
-    mat-card-actions {
-      display: flex;
-      justify-content: center;
-      padding-bottom: 16px;
-    }
-  }
-  .product-card{
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    flex-direction: row;
     gap: 12px;
-    mat-card{
-        max-width: 228px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+    align-items: flex-start;
+    .header {
+      display: flex;
+      flex-direction: column;
+      gap: 4px;
+      justify-content: flex-start;
+      align-items: flex-start;
+    }
+    & .product-body{
+      display: flex;
+      align-items: flex-end;
+      flex-direction: row;
+      gap: 12px;
+      justify-content: space-evenly;
     }
   }
-  .cart-empty {
-    padding: 16px;
-    text-align: center;
-  }
+}
 
-  .mat-grid-tile{
-    min-height: 24px !important;
-    max-width: 200px;
-  }
+// .product-card{
+//   display: flex;
+//   align-items: flex-start;
+//   justify-content: flex-start;
+//   flex-wrap: wrap;
+//   flex-direction: row;
+//   gap: 12px;
+//   mat-card{
+//       max-width: 228px;
+//       display: flex;
+//       flex-direction: column;
+//       justify-content: center;
+//       align-items: center;
+//   }
+// }
+.cart-empty {
+  padding: 16px;
+  text-align: center;
+}
 
-  .header-section{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 24px 24px 38px 33px;
-  }
+.mat-grid-tile {
+  min-height: 24px !important;
+  max-width: 200px;
+}
+
+.header-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 24px 24px 38px 33px;
+}
