change desing in dash board

--- a/src/app/features/products/products.component.html
+++ b/src/app/features/products/products.component.html
@@ -1,8 +1,28 @@
 <div class="home-container">
-  <section class="header-section">
+  <!-- <section class="header-section">
     <h1>Welcome to Our Store</h1>
     <p>Discover amazing products at great prices!</p>
     <button mat-raised-button color="accent">Shop Now</button>
+  </section> -->
+  <section class="category">
+    <mat-card class="category-card">
+      @for(category of categories;track category.id){
+      <mat-card-content>
+        <div class="category-img">
+          <img
+            mat-card-image
+            [src]="getImage(category.image)"
+            [alt]="category.name"
+            width="104px"
+            height="104px"
+          />
+        </div>
+        <div>
+          <b>{{ category.name }}</b>
+        </div>
+      </mat-card-content>
+      }
+    </mat-card>
   </section>
   <!-- <mat-form-field appearance="fill">
     <mat-label>Category</mat-label>
@@ -18,40 +38,45 @@
       }
     </mat-select>
   </mat-form-field> -->
-  <div class="product-card">
-    @for(product of filteredProducts();track product.id){
-    <mat-card class="product-card">
-      <mat-card-content>
-        <div class="header">
-          <b>{{ product.name }}</b>
-          <b>{{ product.description }}</b>
-          <mat-chip [style]="getBackgrund(product.tagColour)">{{ product.tagName }}</mat-chip>
-        </div>
-        <div class="product-body">
-          <p class="price">{{ product.price | currency }}</p>
-          <!-- <p class="category">Category: {{ product.categoryName }}</p> -->
-          <img
-            mat-card-image
-            [src]="getImage(product.image)"
-            [alt]="product.name"
-            width="104px"
-            height="104px"
-          />
-        </div>
-      </mat-card-content>
-      <mat-card-footer>
-        <mat-card-actions>
-          <button
-            mat-raised-button
-            color="primary"
-            class="add-btn"
-            (click)="addToCart(product)"
-          >
-            Add to Cart
-          </button>
-        </mat-card-actions>
-      </mat-card-footer> 
-    </mat-card>
-    }
-  </div>
+  <section>
+    <div class="product-card">
+      @for(product of filteredProducts();track product.id){
+      <mat-card class="product-card">
+        <mat-card-content>
+          <div class="header">
+            <div class="name">
+              <b>{{ product.name }}</b>
+            </div>
+            <mat-chip [style]="getBackgrund(product.tagColour)">{{
+              product.tagName
+            }}</mat-chip>
+          </div>
+          <div class="product-body">
+            <p class="price">{{ product.price | currency }}</p>
+            <!-- <p class="category">Category: {{ product.categoryName }}</p> -->
+            <img
+              mat-card-image
+              [src]="getImage(product.image)"
+              [alt]="product.name"
+              width="104px"
+              height="104px"
+            />
+          </div>
+        </mat-card-content>
+        <mat-card-footer>
+          <mat-card-actions>
+            <button
+              mat-raised-button
+              color="primary"
+              class="add-btn"
+              (click)="addToCart(product)"
+            >
+              Add to Cart
+            </button>
+          </mat-card-actions>
+        </mat-card-footer>
+      </mat-card>
+      }
+    </div>
+  </section>
 </div>
