--- a/src/app/features/admin/categories/add-category/add-category.component.html
+++ b/src/app/features/admin/categories/add-category/add-category.component.html
@@ -11,7 +11,17 @@
     <mat-label>Description</mat-label>
     <textarea matInput formControlName="description" required></textarea>
   </mat-form-field>
-
+  <div class="custom-file-input">
+    <mat-label>Image URL</mat-label>
+    <div class="file-input">
+        <input type="file" accept="image/*" (change)="onFileSelected($event)" />
+    </div>
+  </div>
+  @if(previewUrl){
+      <div class="image-preview">
+          <img [src]="previewUrl" alt="Selected image preview" width="300px" height="300px">
+        </div>
+    }
   <button
     mat-raised-button
     color="primary"
