--- a/src/app/features/products/products.component.scss
+++ b/src/app/features/products/products.component.scss
@@ -14,7 +14,7 @@ mat-toolbar {
 }
 
 .home-container {
-  padding: 20px 0;
+  padding: 32px 0 0 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -29,14 +29,31 @@ mat-toolbar {
 
   .category {
     width: 100%;
+
     &-card {
       display: flex;
       flex-direction: row;
       gap: 24px;
       width: 100%;
+      overflow-y: hidden;
+      overflow-x: auto;
 
       mat-card-content {
         padding: 16px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        transition: transform .2s;
+
+        p {
+          margin: 0;
+        }
+      }
+
+      mat-card-content:hover {
+        transform: scale(1.1);
       }
     }
   }
@@ -93,6 +110,10 @@ mat-toolbar {
   align-items: stretch;
   gap: 24px;
 
+  & mat-card {
+    transition: transform .2s;
+  }
+
   & mat-card-content {
     display: flex;
     flex-direction: column;
@@ -123,6 +144,10 @@ mat-toolbar {
       gap: 12px;
       justify-content: space-evenly;
     }
+  }
+
+  & mat-card:hover {
+    transform: scale(1.05);
   }
 }
 
