--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -1,63 +1,59 @@
 <!-- login.component.html -->
 <div class="login-container">
   <mat-card>
-    <mat-card-header>
-      <mat-card-title>Login</mat-card-title>
-    </mat-card-header>
     <mat-card-content>
-      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-        <mat-form-field appearance="outline">
-          <mat-label>Email</mat-label>
-          <input
-            matInput
-            type="email"
-            formControlName="email"
-            placeholder="Enter your email"
-          />
-          @if(loginForm.get('email')?.hasError('required')) {
-          <mat-error>Email is required</mat-error>
-          } @if(loginForm.get('email')?.hasError('email')){
-          <mat-error>Please enter a valid email address</mat-error>
-          }
-        </mat-form-field>
-
-        <mat-form-field appearance="outline">
-          <mat-label>Password</mat-label>
-          <input
-            matInput
-            [type]="hidePassword ? 'password' : 'text'"
-            formControlName="password"
-            placeholder="Enter your password"
-          />
-          <button
-            mat-icon-button
-            matSuffix
-            (click)="hidePassword = !hidePassword"
-            [attr.aria-label]="'Hide password'"
-            [attr.aria-pressed]="hidePassword"
-          >
-            <mat-icon>{{
-              hidePassword ? "visibility_off" : "visibility"
-            }}</mat-icon>
-          </button>
-          @if(loginForm.get('password')?.hasError('required')){
-          <mat-error>Password is required</mat-error>
-          }
-        </mat-form-field>
-        <div class="btn-group">
-          <button
-            mat-raised-button
-            color="primary"
-            type="submit"
-            [disabled]="loginForm.invalid"
-          >
-            Login
-          </button>
-          <button mat-raised-button color="primary" routerLink="/register">
-            signup
-          </button>
+      <section class="d-flex gap-2">
+        <div class="info-container d-flex justify-space-between flex-column">
+          <div>
+            <h4>
+              Login!
+            </h4>
+            <p>
+              Get access to your Orders, Wishlist and Recommendations
+            </p>
+          </div>
+          <div>
+            <img src="41rapRWUmfL.jpg" alt="" height="102px" width="128px">
+          </div>
         </div>
-      </form>
+        <div class="form-container">
+          <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+            <mat-form-field appearance="outline">
+              <mat-label>Email</mat-label>
+              <input matInput type="email" formControlName="email" placeholder="Enter your email" />
+              @if(loginForm.get('email')?.hasError('required')) {
+              <mat-error>Email is required</mat-error>
+              } @if(loginForm.get('email')?.hasError('email')){
+              <mat-error>Please enter a valid email address</mat-error>
+              }
+            </mat-form-field>
+
+            <mat-form-field appearance="outline">
+              <mat-label>Password</mat-label>
+              <input matInput [type]="hidePassword ? 'password' : 'text'" formControlName="password"
+                placeholder="Enter your password" />
+              <button mat-icon-button matSuffix (click)="hidePassword = !hidePassword"
+                [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidePassword">
+                <mat-icon>{{
+                  hidePassword ? "visibility_off" : "visibility"
+                  }}</mat-icon>
+              </button>
+              @if(loginForm.get('password')?.hasError('required')){
+              <mat-error>Password is required</mat-error>
+              }
+            </mat-form-field>
+            <div class="btn-group">
+              <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid">
+                Login
+              </button>
+              <button mat-raised-button color="primary" routerLink="/register">
+                New To Gir Ghay Wale? Signup
+              </button>
+            </div>
+          </form>
+        </div>
+      </section>
+
     </mat-card-content>
   </mat-card>
 </div>
