--- a/src/app/features/auth/login/login.component.scss
+++ b/src/app/features/auth/login/login.component.scss
@@ -1,39 +1,91 @@
 /* login.component.scss */
 .login-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f5f5f5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f5f5f5;
+}
+
+mat-card {
+  width: 90%;
+}
+
+mat-form-field {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+button[type="submit"] {
+  width: 100%;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.gap-1 {
+  gap: 8px;
+}
+
+.gap-2 {
+  gap: 12px;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.justify-space-between {
+  justify-content: space-between;
+}
+
+.align-center {
+  align-items: center;
+}
+
+.info-container {
+  max-width: 35%;
+  background-color: #2874f0;
+  color: #fff;
+  padding: 40px 33px;
+  font-size: 15px;
+}
+
+.form-container {
+  flex-grow: 1;
+  padding: 48px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+.btn-group {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+
+  & button:first-child {
+    background: #fb641b;
+    border-radius: 0px;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .2);
+    border: none;
+    color: #fff;
   }
-  
-  mat-card {
-    max-width: 400px;
-    width: 90%;
-    padding: 20px;
-  }
-  
-  mat-form-field {
-    width: 100%;
-    margin-bottom: 20px;
-  }
-  
-  button[type="submit"] {
-    width: 100%;
-  }
-  
-  mat-card-title {
+
+  & button:last-child {
+    border: none;
+    line-height: 180%;
     text-align: center;
-    font-size: 24px;
-    margin-bottom: 20px;
+    color: #2874f0;
+    background-color: #fff;
+    margin-top: 16px;
+    border-radius: 0px;
   }
-  
-  form {
-    display: flex;
-    flex-direction: column;
-  }
-  .btn-group{
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-  }
+}
