--- a/src/app/features/auth/register/register.component.html
+++ b/src/app/features/auth/register/register.component.html
@@ -1,100 +1,99 @@
 <!-- signup.component.html -->
 <div class="signup-container">
   <mat-card>
-    <mat-card-title>Sign Up</mat-card-title>
     <mat-card-content>
-      <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
-        <mat-form-field appearance="outline">
-          <mat-label>Firstname</mat-label>
-          <input matInput formControlName="firstname" required />
-          @if(signupForm.get('firstname')?.hasError('required')){
-          <mat-error>firstname is required</mat-error>
-          }
-        </mat-form-field>
-        <mat-form-field appearance="outline">
-          <mat-label>Lastname</mat-label>
-          <input matInput formControlName="lastname" required />
-          @if(signupForm.get('lastname')?.hasError('required')){
-          <mat-error>lastname is required</mat-error>
-          }
-        </mat-form-field>
-        <mat-form-field appearance="outline">
-          <mat-label>Email</mat-label>
-          <input matInput formControlName="email" required type="email" />
-          @if(signupForm.get('email')?.hasError('required')){
-          <mat-error>Email is required</mat-error>
-          } @if(signupForm.get('email')?.hasError('email')){
-          <mat-error>Please enter a valid email address</mat-error>
-          }
-        </mat-form-field>
-        <mat-form-field appearance="outline">
-          <mat-label>Phone</mat-label>
-          <input matInput formControlName="phone" required type="number " />
-          @if(signupForm.get('phone')?.hasError('required')){
-          <mat-error>Phone is required</mat-error>
-          }
-        </mat-form-field>
-        <mat-form-field appearance="outline">
-          <mat-label>Password</mat-label>
-          <input
-            matInput
-            formControlName="password"
-            [type]="hidePassword ? 'password' : 'text'"
-            required
-          />
-          <button
-            mat-icon-button
-            matSuffix
-            (click)="hidePassword = !hidePassword"
-            [attr.aria-label]="'Hide password'"
-            [attr.aria-pressed]="hidePassword"
-          >
-            <mat-icon>{{
-              hidePassword ? "visibility_off" : "visibility"
-            }}</mat-icon>
-          </button>
-          @if(signupForm.get('password')?.hasError('required')){
-          <mat-error>Password is required</mat-error>
-          }
-        </mat-form-field>
-
-        <mat-form-field appearance="outline">
-          <mat-label>Confirm Password</mat-label>
-          <input
-            matInput
-            formControlName="confirmPassword"
-            [type]="hideConfirmPassword ? 'password' : 'text'"
-            required
-          />
-          <button
-            mat-icon-button
-            matSuffix
-            (click)="hideConfirmPassword = !hideConfirmPassword"
-            [attr.aria-label]="'Hide password'"
-            [attr.aria-pressed]="hideConfirmPassword"
-          >
-            <mat-icon>{{
-              hideConfirmPassword ? "visibility_off" : "visibility"
-            }}</mat-icon>
-          </button>
-          @if(signupForm.hasError('notSame')){
-          <mat-error>Passwords do not match</mat-error>
-          }
-        </mat-form-field>
-        <div class="btn-group">
-          <button
-            mat-raised-button
-            color="primary"
-            type="submit"
-            [disabled]="!signupForm.valid"
-          >
-            Sign Up
-          </button>
-          <button mat-raised-button color="primary" routerLink="/login">
-            Login Up
-          </button>
+      <section class="d-flex gap-2">
+        <div class="info-container d-flex justify-space-between flex-column ">
+          <div>
+            <h4>
+              Looks like you're new here!
+            </h4>
+            <p>
+              Sign up with your Personal Details to get started
+            </p>
+          </div>
+          <div>
+            <img src="41rapRWUmfL.jpg" alt="" height="102px" width="128px">
+          </div>
         </div>
-      </form>
+        <div class="form-container">
+          <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+            <div class="d-flex gap-2">
+              <mat-form-field appearance="outline">
+                <mat-label>Firstname</mat-label>
+                <input matInput formControlName="firstname" required />
+                @if(signupForm.get('firstname')?.hasError('required')){
+                <mat-error>firstname is required</mat-error>
+                }
+              </mat-form-field>
+              <mat-form-field appearance="outline">
+                <mat-label>Lastname</mat-label>
+                <input matInput formControlName="lastname" required />
+                @if(signupForm.get('lastname')?.hasError('required')){
+                <mat-error>lastname is required</mat-error>
+                }
+              </mat-form-field>
+            </div>
+            <div class="d-flex gap-2">
+              <mat-form-field appearance="outline">
+                <mat-label>Email</mat-label>
+                <input matInput formControlName="email" required type="email" />
+                @if(signupForm.get('email')?.hasError('required')){
+                <mat-error>Email is required</mat-error>
+                } @if(signupForm.get('email')?.hasError('email')){
+                <mat-error>Please enter a valid email address</mat-error>
+                }
+              </mat-form-field>
+              <mat-form-field appearance="outline">
+                <mat-label>Phone</mat-label>
+                <input matInput formControlName="phone" required type="number " />
+                @if(signupForm.get('phone')?.hasError('required')){
+                <mat-error>Phone is required</mat-error>
+                }
+              </mat-form-field>
+            </div>
+            <div class="d-flex gap-2">
+              <mat-form-field appearance="outline">
+                <mat-label>Password</mat-label>
+                <input matInput formControlName="password" [type]="hidePassword ? 'password' : 'text'" required />
+                <button mat-icon-button matSuffix (click)="hidePassword = !hidePassword"
+                  [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidePassword">
+                  <mat-icon>{{
+                    hidePassword ? "visibility_off" : "visibility"
+                    }}</mat-icon>
+                </button>
+                @if(signupForm.get('password')?.hasError('required')){
+                <mat-error>Password is required</mat-error>
+                }
+              </mat-form-field>
+
+              <mat-form-field appearance="outline">
+                <mat-label>Confirm Password</mat-label>
+                <input matInput formControlName="confirmPassword" [type]="hideConfirmPassword ? 'password' : 'text'"
+                  required />
+                <button mat-icon-button matSuffix (click)="hideConfirmPassword = !hideConfirmPassword"
+                  [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hideConfirmPassword">
+                  <mat-icon>{{
+                    hideConfirmPassword ? "visibility_off" : "visibility"
+                    }}</mat-icon>
+                </button>
+                @if(signupForm.hasError('notSame')){
+                <mat-error>Passwords do not match</mat-error>
+                }
+              </mat-form-field>
+            </div>
+            <div class="btn-group">
+              <button mat-raised-button color="primary" type="submit" [disabled]="!signupForm.valid">
+                Sign Up
+              </button>
+              <button mat-raised-button color="primary" routerLink="/login">
+                Existing User? Login
+              </button>
+            </div>
+          </form>
+        </div>
+      </section>
+
     </mat-card-content>
   </mat-card>
 </div>
