--- a/src/app/features/auth/register/register.component.scss
+++ b/src/app/features/auth/register/register.component.scss
@@ -1,38 +1,94 @@
 // signup.component.scss
 .signup-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #f5f5f5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f5f5f5;
+  height: 100vh;
 
-    mat-card {
-        width: 100%;
-        max-width: 400px;
-        padding: 20px;
+  mat-card {
+    width: 100%;
+    max-width: 80%;
 
-        mat-card-title {
-            text-align: center;
-            margin-bottom: 20px;
-        }
 
-        form {
-            display: flex;
-            flex-direction: column;
-
-            mat-form-field {
-                width: 100%;
-                margin-bottom: 15px;
-            }
-
-            button[type="submit"] {
-                margin-top: 20px;
-            }
-        }
+    .d-flex {
+      display: flex;
     }
+
+    .gap-1 {
+      gap: 8px;
+    }
+
+    .gap-2 {
+      gap: 12px;
+    }
+
+    .flex-column {
+      flex-direction: column;
+    }
+
+    .justify-center {
+      justify-content: center;
+    }
+
+    .justify-space-between {
+      justify-content: space-between;
+    }
+
+    .align-center {
+      align-items: center;
+    }
+
+    .info-container {
+      max-width: 35%;
+      background-color: #2874f0;
+      color: #fff;
+      padding: 40px 33px;
+      font-size: 15px;
+    }
+
+    .form-container {
+      flex-grow: 1;
+      padding: 48px;
+    }
+
+
+    form {
+      display: flex;
+      flex-direction: column;
+
+      mat-form-field {
+        width: 100%;
+        margin-bottom: 15px;
+      }
+
+      button[type="submit"] {
+        margin-top: 20px;
+      }
+    }
+  }
 }
 
 .btn-group {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+
+  & button:first-child {
+    background: #fb641b;
+    border-radius: 0px;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .2);
+    border: none;
+    color: #fff;
+  }
+
+  & button:last-child {
+    border: none;
+    line-height: 180%;
+    text-align: center;
+    color: #2874f0;
+    background-color: #fff;
+    margin-top: 16px;
+    border-radius: 0px;
+  }
 }
