--- a/src/app/features/products/products.component.html
+++ b/src/app/features/products/products.component.html
@@ -41,7 +41,7 @@
   <section>
     <div class="product-card">
       @for(product of filteredProducts();track product.id){
-      <mat-card class="product-card">
+      <mat-card>
         <mat-card-content>
           <div class="header">
             <div class="name">
