--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
 // @supports (scrollbar-color: auto) {
 //     .scrollbox {
 //       scrollbar-color: white !important;
 //       width: 0px !important;
 //     }
 //   }
-  
+
 //   /* Otherwise, use `::-webkit-scrollbar-*` pseudo-elements */
 //   @supports selector(::-webkit-scrollbar) {
 //     .scrollbox::-webkit-scrollbar {
@@ -20,22 +28,34 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 //         width: 0px !important;
 //     }
 //   }
-  ::-webkit-scrollbar {
-    width: 0px;
-    height: 0;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background: #f1f1f1; 
-  }
-   
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: #888; 
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #fff; 
-  }
+mat-card {
+  border-radius: 0px !important;
+}
+
+.mat-divider {
+  width: 100%;
+}
+
+.mat-mdc-button.mat-orange:not(:disabled) {
+  color: orange;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+  height: 0;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #fff;
+}
