--- a/src/app/features/cart/cart/cart.component.scss
+++ b/src/app/features/cart/cart/cart.component.scss
@@ -1,98 +1,155 @@
 // cart.component.scss
 .cart-container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-  .item-list{
+  padding: 32px 0px;
+
+  .item-list {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: stretch;
-
-  }
-    h1 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-  
-    .empty-cart {
-      text-align: center;
-      padding: 20px;
-      font-size: 1.2em;
-    }
-  
-    .cart-item {
+    width: 70%;
+    position: relative;
+    gap: 12px;
+    height: calc(100vh - 72px);
+    overflow: scroll;
+    .address-card{
       display: flex;
       align-items: center;
+      justify-content: space-between;
+      padding: 18px;
       flex-direction: row;
-      margin-bottom: 10px;
-      padding: 10px;
-  
-      .item-image {
-        width: 100px;
-        height: 100px;
-        object-fit: cover;
-        margin-right: 20px;
-      }
-  
-      .item-details {
-        flex-grow: 1;
-  
-        h2 {
-          margin: 0;
-          font-size: 1.2em;
-        }
-  
-        .price {
-          font-weight: bold;
-          color: #673ab7;
-        }
-      }
-  
-      .quantity-control {
-        display: flex;
-        align-items: center;
-        margin: 0 20px;
-  
-        .quantity {
-          margin: 0 10px;
-          font-size: 1.2em;
-        }
-      }
-  
-      .remove-button {
-        margin-left: auto;
-      }
     }
-  
-    .cart-summary {
-      // margin-top: 20px;
-      padding: 24px;
-      .address-header{
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: flex-start;
-        gap: 8px;
-        padding: 12px 0;
-        h6{
-          margin: 0;
-        }
-      }
-      h2 {
-        font-size: 1.5em;
-        margin-bottom: 10px;
-      }
-  
-      button {
-        font-size: 1.2em;
-        padding: 10px 20px;
+    mat-divider {
+      border-top: 1px solid #f0f0f0 !important;
+    }
+    .place-order{
+      padding: 12px;
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      // position: fixed;
+      // bottom: 0;
+      button{
+        padding: 16px 30px;
+        min-width: 250px;
+        text-transform: uppercase;
+        border-radius: 2px;
+        box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .1);
+        font-size: 16px;
+        font-weight: 500;
+        position: relative;
+        background: #fb641b;
+        color: #f0f0f0;
       }
     }
   }
-  .card-container{
+
+  h1 {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  .empty-cart {
+    text-align: center;
+    padding: 20px;
+    font-size: 1.2em;
+  }
+
+  .cart-item {
     display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 24px;
+    align-items: center;
+    flex-direction: row;
+    margin-bottom: 10px;
+    padding: 10px;
+
+    .item-image {
+      width: 100px;
+      height: 100px;
+      object-fit: cover;
+      margin-right: 20px;
+    }
+
+    .item-details {
+      flex-grow: 1;
+
+      h2 {
+        margin: 0;
+        font-size: 1.2em;
+      }
+
+      .price {
+        font-weight: bold;
+        color: #673ab7;
+      }
+    }
   }
+
+  .item-footer {
+    display: flex;
+    align-items: center;
+    padding: 12px 0px;
+    .quantity-control {
+      display: flex;
+      align-items: center;
+      margin: 0 20px;
+      .quantity {
+        margin: 0 10px;
+        font-size: 1.2em;
+        border: 1px solid;
+        padding: 8px 16px;
+        border-radius: 4px;
+      }
+    }
+  }
+
+  .cart-summary {
+    border-radius: 0px;
+    width: 30%;
+
+    .price-header {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: flex-start;
+      gap: 8px;
+      padding: 12px 0;
+
+      .price-title {
+        display: block;
+        text-transform: uppercase;
+        font-weight: 500;
+        color: #878787;
+        border-radius: 2px 2px 0 0;
+      }
+
+      h6 {
+        margin: 0;
+      }
+
+      .price-table {
+        width: 100%;
+      }
+
+    }
+
+    h2 {
+      font-size: 1.5em;
+      margin-bottom: 10px;
+    }
+
+    button {
+      font-size: 1.2em;
+      padding: 10px 20px;
+    }
+  }
+}
+
+.card-container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 12px;
+}
+
+.gree-text {
+  color: #388e3c;
+}
