--- a/src/app/features/cart/cart/cart.component.html
+++ b/src/app/features/cart/cart/cart.component.html
@@ -12,7 +12,7 @@
       <mat-card class="address-card">
         <div>From Saved Addresses</div>
         <div>
-          <button mat-button>Enter Delivery Pincode</button>
+          <button mat-button (click)="addAddress()">Enter Delivery Pincode</button>
         </div>
       </mat-card>
       <mat-card>
